--- a/styles.css
+++ b/styles.css
@@ -58,6 +58,15 @@
   justify-content: center;
   align-items: center;
 }
+.price-card__price_green {
+  background-color: #5bb189;
+}
+.price-card__price_blue {
+  background-color: #3a6ba5;
+}
+.price-card__price_orange {
+  background-color: #ec632a;
+}
 .price-card__price-title {
   font-size: 55px;
   font-weight: 700;
@@ -93,6 +102,27 @@
 .option-list__checkmark {
   margin: 0 22px;
 }
+.option-list__checkmark_green {
+  display: inline-block;
+  background-image: url("https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson+25/verification-checkmark-symbol_green.png");
+  background-repeat: no-repeat;
+  width: 16px;
+  height: 13px;
+}
+.option-list__checkmark_blue {
+  display: inline-block;
+  background-image: url("https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson+25/verification-checkmark-symbol_blue.png");
+  background-repeat: no-repeat;
+  width: 16px;
+  height: 13px;
+}
+.option-list__checkmark_orange {
+  display: inline-block;
+  background-image: url("https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson+25/verification-checkmark-symbol_orange.png");
+  background-repeat: no-repeat;
+  width: 16px;
+  height: 13px;
+}
 
 .price-card__footer {
   display: flex;
@@ -109,16 +139,13 @@
   color: #fff;
   line-height: 17px;
 }
-
-.green {
+.price-card__order-btn_green {
   background-color: #5bb189;
 }
-
-.blue {
+.price-card__order-btn_blue {
   background-color: #3a6ba5;
 }
-
-.orange {
+.price-card__order-btn_orange {
   background-color: #ec632a;
 }
 
@@ -131,7 +158,7 @@ body {
   display: flex;
   justify-content: center;
   background-color: #141b1c;
-  padding: 64px 0;
+  align-items: center;
 }
 
 .price-card {
